--- a/references.bib
+++ b/references.bib
@@ -279,6 +279,25 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Band et al_2017_Intervention planning for a digital intervention for self-management of2.pdf}
 }
 
+@article{bantrywhiteJournalArticleReporting2019,
+  title = {The {{Journal Article Reporting Standards}} for {{Qualitative Primary}}, {{Qualitative Meta-Analytic}} and {{Mixed Methods Research}}: {{Applying}} the {{Standards}} to {{Social Work Research}}},
+  shorttitle = {The {{Journal Article Reporting Standards}} for {{Qualitative Primary}}, {{Qualitative Meta-Analytic}} and {{Mixed Methods Research}}},
+  author = {Bantry White, Eleanor and Hurley, Mary and {\'O} S{\'u}illeabh{\'a}in, Fiachra},
+  year = {2019},
+  month = sep,
+  journal = {Journal of Evidence-Based Social Work},
+  volume = {16},
+  number = {5},
+  pages = {469--477},
+  publisher = {Routledge},
+  issn = {2640-8066},
+  doi = {10.1080/26408066.2019.1650317},
+  urldate = {2021-10-03},
+  abstract = {The American Psychological Association published the Task Force Report on Journal Article Reporting Standards for Qualitative Primary, Qualitative Meta-Analytic and Mixed Methods Research in Psychology in 2018. The standards have wide applicability across the social sciences and can make an important contribution to social work scholarship. The standards recognize diversity within qualitative and mixed methods research traditions while successfully distilling out a set of coherent reporting standards to guide authors and reviewers. In this paper, we examine the standards' utility for social work, examining how these respond to critiques of reporting practices in qualitative research, and how social work scholars can apply them. While there may be some contestation among scholars in social work, we propose that the standards are indeed inclusive of diverse interpretative and critical voices in Social Work. We conclude with recommending the adoption of these standards by the social work research community.},
+  keywords = {_tablet,*American Psychological Association,*Mixed Methods Research,*Qualitative Methods,*Reporting Standards,*Social Casework,Behavioral Sciences,Meta Analysis,mixed methods research,QES-maybe,qualitative methods,Reporting standards,Social Sciences,Social Work},
+  file = {/Users/james/Zotero/storage/VS6TPV3R/Bantry White et al_2019_The Journal Article Reporting Standards for Qualitative Primary, Qualitative.pdf;/Users/james/Zotero/storage/AJZF5B43/26408066.2019.html}
+}
+
 @article{barnesImpactOnlineWriting2015,
   title = {Impact of an Online Writing Aid Tool for Writing a Randomized Trial Report: The {{COBWEB}} ({{Consort-based WEB}} Tool) Randomized Controlled Trial},
   shorttitle = {Impact of an Online Writing Aid Tool for Writing a Randomized Trial Report},
@@ -853,6 +872,15 @@
   urldate = {2023-10-06},
   abstract = {When based on user research, personas support user-centered design throughout a project's lifecycle by making characteristics of key user segments more salient.},
   howpublished = {https://www.nngroup.com/articles/persona/},
+  langid = {english}
+}
+
+@misc{ExplorationsStyle,
+  title = {Explorations of {{Style}}},
+  journal = {Explorations of Style},
+  urldate = {2024-03-21},
+  abstract = {A Blog about Academic Writing},
+  howpublished = {https://explorationsofstyle.com/},
   langid = {english}
 }
 
@@ -2472,6 +2500,18 @@
   file = {/Users/james/Zotero/storage/DMDVHQHU/Svensøy et al_2021_A Qualitative Study on Researchers’ Experiences after Publishing Scientific.pdf;/Users/james/Zotero/storage/CCTQHMZZ/E9D7F39DD262CD863A9B7A0BEBAF217E.html}
 }
 
+@book{swordStylishAcademicWriting2012,
+  title = {Stylish {{Academic Writing}}},
+  author = {Sword, Helen},
+  year = {2012},
+  eprint = {j.ctt2jbw8b},
+  eprinttype = {jstor},
+  publisher = {Harvard University Press},
+  urldate = {2024-03-21},
+  abstract = {Elegant ideas deserve elegant expression. Sword dispels the myth that you can't get published without writing wordy, impersonal prose. For scholars frustrated with disciplinary conventions or eager to write for a larger audience, here are imaginative, practical, witty pointers that show how to make articles and books enjoyable to read---and to write.},
+  isbn = {978-0-674-06448-5}
+}
+
 @article{szinayInfluencesUptakeHealth2021,
   title = {Influences on the {{Uptake}} of {{Health}} and {{Well-being Apps}} and {{Curated App Portals}}: {{Think-Aloud}} and {{Interview Study}}},
   shorttitle = {Influences on the {{Uptake}} of {{Health}} and {{Well-being Apps}} and {{Curated App Portals}}},
@@ -2547,6 +2587,23 @@
   abstract = {The syntheses of multiple qualitative studies can pull together data across different contexts, generate new theoretical or conceptual models, identify research gaps, and provide evidence for the development, implementation and evaluation of health interventions. This study aims to develop a framework for reporting the synthesis of qualitative health research.},
   keywords = {Qualitative health research,Reporting,Standards,Thematic synthesis},
   file = {/Users/james/Zotero/storage/HNHYLRTB/Tong et al_2012_Enhancing transparency in reporting the synthesis of qualitative research.pdf;/Users/james/Zotero/storage/TNIENABA/1471-2288-12-181.html}
+}
+
+@article{toporIntegrativeFrameworkPlanning2023,
+  title = {An Integrative Framework for Planning and Conducting {{Non-Intervention}}, {{Reproducible}}, and {{Open Systematic Reviews}} ({{NIRO-SR}}).},
+  author = {Topor, Marta and Pickering, Jade S. and Mendes, Ana Barbosa and Bishop, Dorothy V. M. and B{\"u}ttner, Fionn and Elsherif, Mahmoud M. and Evans, Thomas R. and Henderson, Emma L. and Kalandadze, Tamara and Nitschke, Faye T. and Staaks, Janneke P. C. and van den Akker, Olmo R. and Yeung, Siu Kit and Zaneva, Mirela and Lam, Alison and Madan, Christopher R. and Moreau, David and O'Mahony, Aoife and Parker, Adam J. and Riegelman, Amy and Testerman, Meghan and Westwood, Samuel J.},
+  year = {2023},
+  month = jul,
+  journal = {Meta-Psychology},
+  volume = {7},
+  issn = {2003-2714},
+  doi = {10.15626/MP.2021.2840},
+  urldate = {2024-03-21},
+  abstract = {Most of the commonly used and endorsed guidelines for systematic review protocols and reporting standards have been developed for intervention research. These excellent guidelines have been adopted as the gold-standard for systematic reviews as an evidence synthesis method. In the current paper, we highlight some issues that may arise from adopting these guidelines beyond intervention designs, including in basic behavioural, cognitive, experimental, and exploratory research. We have adapted and built upon the existing guidelines to establish a complementary, comprehensive, and accessible tool for designing, conducting, and reporting Non-Intervention, Reproducible, and Open Systematic Reviews (NIRO-SR). NIRO-SR is a checklist composed of two parts that provide itemised guidance on the preparation of a systematic review protocol for pre-registration (Part A) and reporting the review (Part B) in a reproducible and transparent manner. This paper, the tool, and an open repository (https://osf.io/f3brw) provide a comprehensive resource for those who aim to conduct a high quality, reproducible, and transparent systematic review of non-intervention studies.},
+  copyright = {Copyright (c) 2023 Marta Topor, Jade S Pickering, Ana Barbosa Mendes, Dorothy V M Bishop, Fionn B{\"u}ttner, Mahmoud M Elsherif, Thomas R Evans, Emma L Henderson, Tamara Kalandadze, Faye T Nitschke, Janneke P C Staaks, Olmo R van den Akker, Siu Kit Yeung, Mirela Zaneva, Alison Lam, Christopher R Madan, David Moreau, Aoife O'Mahony, Adam J Parker, Amy  Riegelman, Meghan Testerman, Samuel J Westwood},
+  langid = {english},
+  keywords = {guidelines,non-intervention research,open research,reproducibility,systematic reviews,transparency},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Topor et al_2023_An integrative framework for planning and conducting Non-Intervention,.pdf}
 }
 
 @misc{UsageStatisticsMarket,
