tweaking word count

--- a/metadata/_wordcounts.qmd
+++ b/metadata/_wordcounts.qmd
@@ -1,3 +1,4 @@
 
+* Refining-reporting-guidelines-using-behaviour-change-theory--Draft-1-May-2024: 75785 (inc. tables: 92453)
 
-**TOTAL: 0 (inc. tables: 0)**
+**TOTAL: 75785 (inc. tables: 92453)**
