fixing missing citations

--- a/references.bib
+++ b/references.bib
@@ -78,7 +78,7 @@
   file = {/Users/james/Zotero/storage/KVZIG6MN/Altman - 1996 - Better reporting of randomised controlled trials .pdf}
 }
 
-@article{altmanHistoryEvolutionGuidelines2016a,
+@article{altmanHistoryEvolutionGuidelines2016,
   title = {A History of the Evolution of Guidelines for Reporting Medical Research: The Long Road to the {{EQUATOR Network}}},
   shorttitle = {A History of the Evolution of Guidelines for Reporting Medical Research},
   author = {Altman, Douglas G and Simera, Iveta},
@@ -93,7 +93,7 @@
   urldate = {2023-08-15},
   pmcid = {PMC4793768},
   pmid = {26880653},
-  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Altman_Simera_2016_A history of the evolution of guidelines for reporting medical research.pdf}
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Altman_Simera_2016_A history of the evolution of guidelines for reporting medical research.pdf;/Users/james/Zotero/storage/8LU2QQVZ/Altman_Simera_2016_A history of the evolution of guidelines for reporting medical research.pdf}
 }
 
 @article{altmanReportingRecommendationsTumor2012,
@@ -2130,6 +2130,23 @@
   file = {/Users/james/Zotero/storage/7HFGXCC9/Moher et al_2010_Guidance for Developers of Health Research Reporting Guidelines.pdf;/Users/james/Zotero/storage/BN9FQXX7/Moher et al_2010_Guidance for developers of health research reporting guidelines.pdf;/Users/james/Zotero/storage/RCRVDMJT/Moher et al_2010_Guidance for Developers of Health Research Reporting Guidelines.pdf;/Users/james/Zotero/storage/RGURDIRS/article.html;/Users/james/Zotero/storage/XJ6R4TZR/article.html}
 }
 
+@article{moherPreferredReportingItems2015,
+  title = {Preferred Reporting Items for Systematic Review and Meta-Analysis Protocols ({{PRISMA-P}}) 2015 Statement},
+  author = {Moher, David and Shamseer, Larissa and Clarke, Mike and Ghersi, Davina and Liberati, Alessandro and Petticrew, Mark and Shekelle, Paul and Stewart, Lesley A. and {PRISMA-P Group}},
+  year = {2015},
+  month = jan,
+  journal = {Systematic Reviews},
+  volume = {4},
+  number = {1},
+  pages = {1},
+  issn = {2046-4053},
+  doi = {10.1186/2046-4053-4-1},
+  urldate = {2021-03-05},
+  abstract = {Systematic reviews should build on a protocol that describes the rationale, hypothesis, and planned methods of the review; few reviews report whether a protocol exists. Detailed, well-described protocols can facilitate the understanding and appraisal of the review methods, as well as the detection of modifications to methods and selective reporting in completed reviews. We describe the development of a reporting guideline, the Preferred Reporting Items for Systematic reviews and Meta-Analyses for Protocols 2015 (PRISMA-P 2015). PRISMA-P consists of a 17-item checklist intended to facilitate the preparation and reporting of a robust protocol for the systematic review. Funders and those commissioning reviews might consider mandating the use of the checklist to facilitate the submission of relevant protocol information in funding applications. Similarly, peer reviewers and editors can use the guidance to gauge the completeness and transparency of a systematic review protocol submitted for publication in a journal or other medium.},
+  keywords = {Checklist Item,Knowledge Translation,Reporting Guideline,Systematic Review,Systematic Review Protocol},
+  file = {/Users/james/Zotero/storage/FKC6E88P/Moher et al_2015_Preferred reporting items for systematic review and meta-analysis protocols.pdf;/Users/james/Zotero/storage/5J7GPHHK/2046-4053-4-1.html}
+}
+
 @article{mollerUsabilityTestingUser2013,
   title = {Usability {{Testing}} of {{User Manuals}}},
   author = {M{\o}ller, Margrethe H.},
@@ -2282,6 +2299,29 @@
   file = {/Users/james/Zotero/storage/EVJVW6XH/O'Cathain et al. - 2010 - Three techniques for integrating data in mixed met.pdf}
 }
 
+@article{ogrincSQUIREStandardsQUality2016,
+  title = {{{SQUIRE}} 2.0 ({{Standards}} for {{QUality Improvement Reporting Excellence}}): Revised Publication Guidelines from a Detailed Consensus Process},
+  shorttitle = {{{SQUIRE}} 2.0 ({{Standards}} for {{QUality Improvement Reporting Excellence}})},
+  author = {Ogrinc, Greg and Davies, Louise and Goodman, Daisy and Batalden, Paul and Davidoff, Frank and Stevens, David},
+  year = {2016},
+  month = dec,
+  journal = {BMJ Quality \& Safety},
+  volume = {25},
+  number = {12},
+  pages = {986--992},
+  publisher = {BMJ Publishing Group Ltd},
+  issn = {2044-5415, 2044-5423},
+  doi = {10.1136/bmjqs-2015-004411},
+  urldate = {2020-11-05},
+  abstract = {Since the publication of Standards for QUality Improvement Reporting Excellence (SQUIRE 1.0) guidelines in 2008, the science of the field has advanced considerably. In this manuscript, we describe the development of SQUIRE 2.0 and its key components. We undertook the revision between 2012 and 2015 using (1) semistructured interviews and focus groups to evaluate SQUIRE 1.0 plus feedback from an international steering group, (2) two face-to-face consensus meetings to develop interim drafts and (3) pilot testing with authors and a public comment period. SQUIRE 2.0 emphasises the reporting of three key components of systematic efforts to improve the quality, value and safety of healthcare: the use of formal and informal theory in planning, implementing and evaluating improvement work; the context in which the work is done and the study of the intervention(s). SQUIRE 2.0 is intended for reporting the range of methods used to improve healthcare, recognising that they can be complex and multidimensional. It provides common ground to share these discoveries in the scholarly literature (http://www.squire-statement.org).},
+  chapter = {Research and reporting methodology},
+  copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://www.bmj.com/company/products-services/rights-and-licensing/. This is an Open Access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited and the use is non-commercial. See: http://creativecommons.org/licenses/by-nc/4.0/},
+  langid = {english},
+  pmid = {26369893},
+  keywords = {_tablet,Healthcare quality improvement,Quality improvement,Quality improvement methodologies},
+  file = {/Users/james/Zotero/storage/NC3CMIRK/Ogrinc et al_2016_SQUIRE 2.pdf}
+}
+
 @article{pagePRISMA2020Statement2021,
   title = {The {{PRISMA}} 2020 Statement: An Updated Guideline for Reporting Systematic Reviews},
   shorttitle = {The {{PRISMA}} 2020 Statement},
@@ -2364,6 +2404,20 @@
   howpublished = {https://www.penelope.ai},
   langid = {american},
   file = {/Users/james/Zotero/storage/HK8U72WF/www.penelope.ai.html}
+}
+
+@article{perciedusertReportingAnimalResearch2020,
+  title = {Reporting Animal Research: {{Explanation}} and Elaboration for the {{ARRIVE}} Guidelines 2.0.},
+  author = {{Percie du Sert}, Nathalie and Ahluwalia, Amrita and Alam, Sabina and Avey, Marc T and Baker, Monya and Browne, William J and Clark, Alej and {ra} and Cuthill, Innes C and Dirnagl, Ulrich and Emerson, Michael and Garner, Paul and Holgate, Stephen T and Howells, David W and Hurst, Viki and Karp, Natasha A and Lazic, Stanley E and Lidster, Katie and MacCallum, Catriona J and Macleod, Malcolm and Pearl, Esther J and Petersen, Ole H and Rawle, Frances and Reynolds, Penny and Rooney, Kieron and Sena, Emily S and Silberberg, Shai D and Steckler, Thomas and Wurbel, Hanno},
+  year = {2020},
+  journal = {PLoS biology},
+  volume = {18},
+  number = {7},
+  pages = {e3000411},
+  issn = {1545-7885},
+  abstract = {Improving the reproducibility of biomedical research is a major challenge. Transparent and accurate reporting is vital to this process; it allows readers to assess the reliability of the findings and repeat or build upon the work of other researchers. The ARRIVE guidelines (Animal Research: Reporting In Vivo Experiments) were developed in 2010 to help authors and journals identify the minimum information necessary to report in publications describing in vivo experiments. Despite widespread endorsement by the scientific community, the impact of ARRIVE on the transparency of reporting in animal research publications has been limited. We have revised the ARRIVE guidelines to update them and facilitate their use in practice. The revised guidelines are published alongside this paper. This explanation and elaboration document was developed as part of the revision. It provides further information about each of the 21 items in ARRIVE 2.0, including the rationale and supporting evidence for their inclusion in the guidelines, elaboration of details to report, and examples of good reporting from the published literature. This document also covers advice and best practice in the design and conduct of animal studies to support researchers in improving standards from the start of the experimental design process through to publication.},
+  keywords = {_tablet,*Animal Experimentation,*Guidelines as Topic,*Research Report,Animal,Animal behavior,Animal Experimentation/es [Ethics],Animal Husbandry,Animal models,Animal Shells,Animal welfare,Animals,Body weight,Confidence Intervals,Diet,Experimental design,Health Care,Housing,Outcome Assessment,Publications,QES-exclude,Random Allocation,Reproducibility of Results,Sample Size,Surgical and invasive medical procedures,Systematic reviews},
+  file = {/Users/james/Zotero/storage/9L758KWJ/Sert et al_2020_Reporting animal research.pdf;/Users/james/Zotero/storage/BS8DVSF4/Sert et al_2020_Reporting animal research.pdf;/Users/james/Zotero/storage/FHD6BZXT/article.html}
 }
 
 @misc{PersonasHealthEducation,
@@ -2651,6 +2705,24 @@
   pmid = {37271424},
   keywords = {Checklist,Checklists,Replicability,Reproducibility,Research waste,Research-on-research},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Santo et al_2023_Methods and results of studies on reporting guideline adherence are poorly.pdf}
+}
+
+@article{schulzCONSORT2010Statement2010,
+  title = {{{CONSORT}} 2010 {{Statement}}: Updated Guidelines for Reporting Parallel Group Randomised Trials},
+  shorttitle = {{{CONSORT}} 2010 {{Statement}}},
+  author = {Schulz, Kenneth F. and Altman, Douglas G. and Moher, David and {the CONSORT Group}},
+  year = {2010},
+  month = mar,
+  journal = {BMC Medicine},
+  volume = {8},
+  number = {1},
+  pages = {18},
+  issn = {1741-7015},
+  doi = {10.1186/1741-7015-8-18},
+  urldate = {2021-03-08},
+  abstract = {The CONSORT statement is used worldwide to improve the reporting of randomised controlled trials. Kenneth Schulz and colleagues describe the latest version, CONSORT 2010, which updates the reporting guideline based on new methodological evidence and accumulating experience.},
+  keywords = {Checklist Item,Consort Statement,Item Number,Reporting Guideline,Transparent Reporting},
+  file = {/Users/james/Zotero/storage/XKB72WG2/Schulz et al_2010_CONSORT 2010 Statement.pdf;/Users/james/Zotero/storage/IRMUZJG4/1741-7015-8-18.html}
 }
 
 @misc{SciELO,
