--- a/references.bib
+++ b/references.bib
@@ -209,6 +209,12 @@
   langid = {english}
 }
 
+@misc{ARRIVEGuidelines,
+  title = {{{ARRIVE Guidelines}}},
+  urldate = {2024-05-05},
+  howpublished = {https://arriveguidelines.org/}
+}
+
 @article{atkinsGuideUsingTheoretical2017,
   title = {A Guide to Using the {{Theoretical Domains Framework}} of Behaviour Change to Investigate Implementation Problems},
   author = {Atkins, Lou and Francis, Jill and Islam, Rafat and O'Connor, Denise and Patey, Andrea and Ivers, Noah and Foy, Robbie and Duncan, Eilidh M. and Colquhoun, Heather and Grimshaw, Jeremy M. and Lawton, Rebecca and Michie, Susan},
@@ -775,6 +781,23 @@
   file = {/Users/james/Zotero/storage/C7P2835S/Craig et al_2021_Developing and evaluating complex interventions.pdf}
 }
 
+@article{cravenTaskBasedApproach2007,
+  title = {A Task-based Approach to Assessing the Accessibility of Web Sites},
+  author = {Craven, Jenny and Nietzio, Annika},
+  year = {2007},
+  month = jan,
+  journal = {Performance Measurement and Metrics},
+  volume = {8},
+  number = {2},
+  pages = {98--109},
+  publisher = {Emerald Group Publishing Limited},
+  issn = {1467-8047},
+  doi = {10.1108/14678040710760603},
+  urldate = {2024-05-05},
+  abstract = {Purpose -- The purpose of this paper is to describe research undertaken for the European Internet Accessibility Observatory (EIAO) project. It aims to demonstrate how, using a task-based approach, statistical measures can be applied to an initial assessment of a web site's accessibility, which could then be applied to further assessments to provide an evolving picture of the ongoing accessibility of a web site. Design/methodology/approach -- Task-based assessments were used to assess the accessibility of web sites, using quantitative and qualitative analysis. The findings from this approach were mapped onto a probabilistic model, developed to assess the probability of an accessibility barrier relating to a specific feature or features of a web site. Findings -- The paper finds that providing participants with a task instead of allowing them to randomly explore and evaluate a web site yielded more comparable results. For the EIAO project team, the benefit of the task-based approach was that it allowed them to compare the user testing results with the results of the automated testing tool developed by the project. From the aggregation models included in the analysis, the most appropriate model and parameters were selected, and adjustments were made according to the comparison outcome. Research limitations/implications -- Due to resource limitations and efficiency requirements, the assessments undertaken were limited to automatic evaluation, which could also be tested by the users. Therefore not all accessibility barriers in a web site could be identified. Despite this, it is felt that the outcome of the automatic analysis can be utilised as indicator for the overall accessibility of the web site. Originality/value -- This paper provides a framework for web designers, commissioners, and policy makers to undertake a user focussed assessment of the accessibility of their web sites, which could be used in conjunction with other assessment methods.},
+  keywords = {Internet,Statistical methods,Task analysis}
+}
+
 @misc{criticalappraisalskillsprogrammeCASPQualitativeChecklist2018,
   title = {{{CASP Qualitative Checklist}}},
   author = {Critical Appraisal Skills Programme},
@@ -885,6 +908,23 @@
   pmid = {28596181},
   keywords = {Bias,Humans,Journal Impact Factor,Randomized Controlled Trials as Topic,Reference Standards,Research Design,Review Literature as Topic,Time Factors},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf;/Users/james/Zotero/storage/82TIH7QZ/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf}
+}
+
+@article{dejongDocumentEvaluationMethodology2000,
+  title = {Toward a Document Evaluation Methodology: What Does Research Tell Us about the Validity and Reliability of Evaluation Methods?},
+  shorttitle = {Toward a Document Evaluation Methodology},
+  author = {{de Jong}, M. and Schellens, P.J.},
+  year = {2000},
+  month = sep,
+  journal = {IEEE Transactions on Professional Communication},
+  volume = {43},
+  number = {3},
+  pages = {242--260},
+  issn = {1558-1500},
+  doi = {10.1109/47.867941},
+  abstract = {Although the usefulness of evaluating documents has become generally accepted among communication professionals, the supporting research that puts evaluation practices empirically to the test is only beginning to emerge. This article presents an overview of the available research on troubleshooting evaluation methods. Four lines of research are distinguished concerning the validity of evaluation methods, sample composition, sample size, and the implementation of evaluation results during revision.},
+  keywords = {_tablet,Human computer interaction,Monitoring,Professional communication,Research initiatives,Statistical analysis,Testing,Usability},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/de Jong_Schellens_2000_Toward a document evaluation methodology.pdf}
 }
 
 @article{dejongMetareviewDemonstratesImproved2021,
@@ -1356,6 +1396,12 @@
   file = {/Users/james/Zotero/storage/MRJN2FXR/uHYDAr.html}
 }
 
+@misc{GoogleSearchConsole,
+  title = {Google {{Search Console}}},
+  urldate = {2024-05-05},
+  howpublished = {https://search.google.com/search-console/about}
+}
+
 @misc{Guideline,
   title = {Guideline},
   urldate = {2023-01-10},
@@ -1429,6 +1475,23 @@
   pmid = {31699728},
   keywords = {Explanation,Extension,Science General,Strobe Statement,Technology Acceptance Model},
   file = {/Users/james/Zotero/storage/447K7CID/Hawwash et al_2019_Usefulness of applying research reporting guidelines as Writing Aid software.pdf;/Users/james/Zotero/storage/PVR7PF59/e030943.html}
+}
+
+@article{haynesRethinkingBarriersEnablers2024,
+  title = {Rethinking {{Barriers}} and {{Enablers}} in {{Qualitative Health Research}}: {{Limitations}}, {{Alternatives}}, and {{Enhancements}}},
+  shorttitle = {Rethinking {{Barriers}} and {{Enablers}} in {{Qualitative Health Research}}},
+  author = {Haynes, Abby and Loblay, Victoria},
+  year = {2024},
+  month = mar,
+  journal = {Qualitative Health Research},
+  pages = {10497323241230890},
+  publisher = {SAGE Publications Inc},
+  issn = {1049-7323},
+  doi = {10.1177/10497323241230890},
+  urldate = {2024-05-03},
+  abstract = {Explorations of barriers and enablers (or barriers and facilitators) to a desired health practice, implementation process, or intervention outcome have become so prevalent that they seem to be a default in much health services and public health research. In this article, we argue that decisions to frame research questions or analyses using barriers and enablers (B\&Es) should not be default. Contrary to the strengths of qualitative research, the B\&Es approach often bypasses critical reflexivity and can lead to shallow research findings with poor understanding of the phenomena of interest. The B\&Es approach is untheorised, relying on assumptions of linear, unidirectional processes, universally desirable outcomes, and binary thinking which are at odds with the rich understanding of context and complexity needed to respond to the challenges faced by health services and public health. We encourage researchers to develop research questions using informed deliberation that considers a range of approaches and their implications for producing meaningful knowledge. Alternatives and enhancements to the B\&Es approach are explored, including using `whole package' methodologies; theories, conceptual frameworks, and sensitising ideas; and participatory methods. We also consider ways of advancing existing research on B\&Es rather than doing `more of the same': researchers can usefully investigate how a barrier or enabler works in depth; develop and test implementation strategies for addressing B\&Es; or synthesise the B\&Es literature to develop a new model or theory. Illustrative examples from the literature are provided. We invite further discussion on this topic.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Haynes_Loblay_2024_Rethinking Barriers and Enablers in Qualitative Health Research.pdf}
 }
 
 @misc{HealthMedicalArticles,
@@ -1532,6 +1595,15 @@
   urldate = {2024-03-22},
   abstract = {Health economic evaluations are comparative analyses of alternative courses of action in terms of their costs and consequences. The Consolidated Health Economic Evaluation Reporting Standards (CHEERS) statement, published in 2013, was created to ensure health economic evaluations are identifiable, interpretable, and useful for decision making. It was intended as guidance to help authors report accurately which health interventions were being compared and in what context, how the evaluation was undertaken, what the findings were, and other details that may aid readers and reviewers in interpretation and use of the study. The new CHEERS 2022 statement replaces previous CHEERS reporting guidance. It reflects the need for guidance that can be more easily applied to all types of health economic evaluation, new methods and developments in the field, as well as the increased role of stakeholder involvement including patients and the public. It is also broadly applicable to any form of intervention intended to improve the health of individuals or the population, whether simple or complex, and without regard to context (such as health care, public health, education, social care, etc). This summary article presents the new CHEERS 2022 28-item checklist and recommendations for each item. The CHEERS 2022 statement is primarily intended for researchers reporting economic evaluations for peer reviewed journals as well as the peer reviewers and editors assessing them for publication. However, we anticipate familiarity with reporting requirements will be useful for analysts when planning studies. It may also be useful for health technology assessment bodies seeking guidance on reporting, as there is an increasing emphasis on transparency in decision making.},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Husereau et al_2022_Consolidated Health Economic Evaluation Reporting Standards 2022 (CHEERS 2022).pdf}
+}
+
+@misc{Hypothes,
+  title = {Hypothes.Is},
+  journal = {Hypothesis},
+  urldate = {2024-05-05},
+  abstract = {{$<$}p{$>$}Collaborate with anyone, anywhere. Use Hypothesis to annotate anything online with classmates, colleagues, or friends. Create a free personal account, or talk to our sales team about Education solutions. Get [{\dots}]{$<$}/p{$>$}},
+  howpublished = {https://web.hypothes.is/},
+  langid = {american}
 }
 
 @misc{ICMJERecommendationsPreparing,
