fixes after read through

--- a/references.bib
+++ b/references.bib
@@ -1978,7 +1978,12 @@
   copyright = {2021 The Author(s)},
   langid = {english},
   keywords = {Authorship,Ethics,Funding,Journalism,Publishing},
-  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Authorship;Ethics;Funding;Journalism;Publishing Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
+  annotation = {Bandiera\_abtest: a\\
+Cc\_license\_type: cc\_by\\
+Cg\_type: Nature Research Journals\\
+Primary\_atype: Research\\
+Subject\_term: Authorship;Ethics;Funding;Journalism;Publishing\\
+Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Zotero/storage/88J9B5RE/Malički et al. - 2021 - Systematic review and meta-analyses of studies ana.pdf;/Users/james/Zotero/storage/VXRE5YAV/Malički et al_2021_Systematic review and meta-analyses of studies analysing instructions to.pdf;/Users/james/Zotero/storage/4KQ6YQUR/s41467-021-26027-y.html}
 }
 
@@ -3042,6 +3047,12 @@
   abstract = {There is a growing recognition of the value of synthesising qualitative research in the evidence base in order to facilitate effective and appropriate health care. In response to this, methods for undertaking these syntheses are currently being developed. Thematic analysis is a method that is often used to analyse data in primary qualitative research. This paper reports on the use of this type of analysis in systematic reviews to bring together and integrate the findings of multiple qualitative studies.},
   keywords = {_tablet,Analytical Theme,Healthy Eating,Primary Study,Qualitative Research,Review Question},
   file = {/Users/james/Zotero/storage/Y2534QQE/Thomas_Harden_2008_Methods for the thematic synthesis of qualitative research in systematic reviews.pdf;/Users/james/Zotero/storage/ZBTBNZNK/1471-2288-8-45.html}
+}
+
+@misc{TIDieRAuthorTool,
+  title = {{{TIDieR}} {\textbar} {{Author}} Tool},
+  urldate = {2024-05-20},
+  howpublished = {https://tidierguide.org/\#/author-tool}
 }
 
 @article{tongConsolidatedCriteriaReporting2007,
